@@ -1,5 +1,12 @@
 2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>
 
+        * src/jacl/tcl/lang/ExecCmd.java: Remove scary
+        runtime exec logic and replace with
+        exec introduced in JDK 1.3. The old code is
+        no longer needed since we require JDK 1.4 now.
+
+2006-06-29  Mo DeJong  <mdejong@users.sourceforge.net>
+
         * tests/tcljava/tcljavaInterp.test: Update memory
         size test so that it passes in both Jacl and Tcl Blend.
 
